force-app/main/default/objects/ProductDiscount__c/ProductDiscount__c.object-meta.xml
<CustomObject>
    <label>ProductDiscount</label>
    <nameField>
        <label>ProductDiscount Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>