force-app/main/default/objects/ProductDiscount__c/fields/CatalogProduct__c.field-meta.xml
<CustomField>
    <fullName>CatalogProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CatalogProduct</label>
    <referenceTo>CatalogProduct__c</referenceTo>
    <relationshipLabel>ProductDiscount</relationshipLabel>
    <relationshipName>ProductDiscount</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>