force-app/main/default/objects/ProductDiscount__c/fields/DiscountQuantity__c.field-meta.xml
<CustomField>
    <fullName>DiscountQuantity__c</fullName>
    <label>DiscountQuantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>